--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,15 +4,18 @@
         <title>Nathan Hirata - Snake JS</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css">
+        <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
     </head>
-    <body>
+    <body background="images/snake.jpg">
         <p class="titleIndex">SNAKE</p>
-        <p1>By Nathan Hirata</p1><br/>
-        <a href="easy.html">snake easy</a>
-        <a href="Medium.html">snake medium</a>
-        <a href="Hard.html">snake hard</a>
-        <a href="Impossible.html">snake impossible</a>
+        <p1 class="p1">By Nathan Hirata</p1><br/>
+    <ul class="nav nav-pills">
+        <li><a id="slug" href="Easy.html">Slug</a></li>
+        <li><a id="worm" href="Medium.html">Worm</a></li>
+        <li><a id="seaSnake" href=Hard.html>Sea Snake</a></li>
+        <li><a id="blackMamba" href="Impossible.html">Black Mamba</a></li>
+    </ul>
     </body>
 </html>
