--- a/public_html/Hard.html
+++ b/public_html/Hard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html><!-- this is my game screen for my sea snake difficulty mode -->
     <head>
         <title>Nathan Hirata - Snake JS</title>
         <meta charset="UTF-8">
