--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html><!-- This is my main menu where you select your difficulty -->
     <head>
         <title>Nathan Hirata - Snake JS</title>
         <meta charset="UTF-8">
